# firefighter-robot-finished

./: README.md
Arduino/arduino_achilles/sketch_mar12a/: sketch_mar12a.ino
Arduino/libraries/Equipment/: Equipment.cpp  Equipment.h  keywords.txt
Arduino/libraries/Equipment/exmaple/: main.cpp
Arduino/libraries/MultCode/: MultCode.cpp  MultCode.h  keywords.txt
achilles_base/: CMakeLists.txt  package.xml  urdf.rviz
achilles_base/config/: joint_names_achilles_base.SLDASM.yaml
achilles_base/launch/: display.launch  gazebo.launch
achilles_base/meshes/: base_link.STL  left_Link.STL  right_Link.STL
achilles_base/urdf/: achilles_base.urdf
achilles_detection/: Readme.txt
achilles_detection/flame_detection/: CMakeLists.txt  package.xml
achilles_detection/flame_detection/data/: sample.txt
achilles_detection/flame_detection/include/flame_detection/: FeatureAnalyzer.h  FlameDecider.h  FlameDetector.h  Handler.h  TargetExtractor.h  common.h  utils.h
achilles_detection/flame_detection/launch/: flame3D.launch  flameDetection.launch
achilles_detection/flame_detection/src/: 3DPosition.cpp  FeatureAnalyzer.cpp  FlameDecider.cpp  FlameDetector.cpp  Handler.cpp  TargetExtractor.cpp  main.cpp  utils.cpp
achilles_detection/flame_detection_train/: CMakeLists.txt  Readme.txt  package.xml
achilles_detection/flame_detection_train/data/: sample.txt
achilles_detection/flame_detection_train/include/flame_detection_train/: FeatureAnalyzer.h  FlameDecider.h  FlameDetector.h  TargetExtractor.h  VideoHandler.h  common.h  utils.h
achilles_detection/flame_detection_train/model/: svmdata.xml
achilles_detection/flame_detection_train/src/: FeatureAnalyzer.cpp  FlameDecider.cpp  FlameDetector.cpp  TargetExtractor.cpp  VideoHandler.cpp  main.cpp  utils.cpp
achilles_detection/tools/: CMakeLists.txt  package.xml
achilles_detection/tools/data/: input_X.txt  input_Z.txt  sample_X.csv  sample_Z.csv
achilles_detection/tools/scripts/: arg_test.py  reform.py
achilles_detection/tools/src/: cut_avi.cpp  save_avi.cpp
achilles_exploring/: CMakeLists.txt  package.xml
achilles_exploring/config/mbot/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
achilles_exploring/launch/: move_base.launch  stopDriverToFight.launch
achilles_exploring/scripts/: achilles_goals.py  display_map_with_goal.py  test.py
achilles_fighting/: CMakeLists.txt  package.xml
achilles_fighting/launch/: fighting.launch
achilles_fighting/scripts/: aimming.py
achilles_sensor/learning_joy/: CMakeLists.txt  package.xml
achilles_sensor/learning_joy/include/learning_joy/: TeleopJoy.h
achilles_sensor/learning_joy/launch/: joy_launch.launch
achilles_sensor/learning_joy/src/: TeleopJoy.cpp  teleop_joy.cpp
achilles_sensor/lena_camera/: CMakeLists.txt  lena_usb.rules  package.xml
achilles_sensor/lena_camera/launch/: lena_launch.launch
achilles_sensor/lena_camera/scripts/: lena_ros.py
achilles_sensor/lena_camera/src/: lena_ros.cpp
achilles_sensor/serial/: CMakeLists.txt  arduino_due.rules  package.xml
achilles_sensor/serial/launch/: serial.launch
achilles_sensor/serial/scripts/: CPU.py  Equipment.py  MultCode.py  Serial.py  achilles_node.py
achilles_sensor/serial/src/: Hello.cpp
achilles_sensor/serial/协议/: 基于MultCode协议的设备编码.txt
achilles_sensor/tr10_controller/: CMakeLists.txt
achilles_sensor/tr10_controller/include/tr10_controller/: transform_utils.py
achilles_sensor/tr10_controller/include/trd_diff_controller/: trd_diff_controller.h
achilles_sensor/tr10_controller/launch/: tr10_minimal.launch
achilles_sensor/tr10_controller/rviz/: odom_out_and_back.rviz
achilles_sensor/tr10_controller/scripts/: odom_out_and_back.py
achilles_sensor/tr10_controller/src/: trd_diff_controller.cpp  trd_diff_controller_node.cpp
achilles_sensor/ydlidar/launch/: lidar.launch
achilles_store/: CMakeLists.txt  package.xml
achilles_store/msg/: pose.msg
achilles_store/srv/: mosSwitch.srv  poseDestination.srv
achilles_tf/: CMakeLists.txt  package.xml
achilles_tf/src/: achilles_tf.cpp
tr10_controller/: motor_trd.rules  package.xml  setup.py
tr10_controller/include/trd_diff_controller/: message.h  message_manager.h  serial_port.h
tr10_controller/launch/: tr10_controller.launch
tr10_controller/model/urdf/: tr10.urdf
tr10_controller/rviz/: odom_square.rviz  timed_out_and_back.rviz
tr10_controller/scripts/: odom_square.py  timed_out_and_back.py
tr10_controller/src/: get_motor_status.cpp  message.cpp  message_manager.cpp  serial_port.cpp
