<?xml version="1.0"?>
<package>
  <name>tr10_controller</name>
  <version>0.0.1</version>
  <description>The tr10_controller package</description>
  <maintainer email="jeff.gao@tonyrobotics.com">jeff.gao</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/trd_diff_controller</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <export>
  </export>
</package>
